--- a/tear_plots/plot_gen.ipynb
+++ b/tear_plots/plot_gen.ipynb
@@ -136,7 +136,8 @@
     "    # fig.set_figwidth(15)\n",
     "    # fig.set_figheight(10)\n",
     "    fig.savefig(f'{pair}.jpg', dpi=300)\n",
-    "    fig.clf()\n"
+    "    fig.clf()\n",
+    "    return ax"
    ],
    "metadata": {
     "collapsed": false,
@@ -147,8 +148,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 33,
    "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'NoneType' object has no attribute 'show'",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[1;31mAttributeError\u001B[0m                            Traceback (most recent call last)",
+      "\u001B[1;32m~\\AppData\\Local\\Temp/ipykernel_19652/29910543.py\u001B[0m in \u001B[0;36m<module>\u001B[1;34m\u001B[0m\n\u001B[0;32m      2\u001B[0m     \u001B[0max\u001B[0m\u001B[1;33m=\u001B[0m \u001B[0mplot_pair\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mdf_f\u001B[0m\u001B[1;33m,\u001B[0m \u001B[1;33m(\u001B[0m\u001B[1;34m'mat'\u001B[0m\u001B[1;33m,\u001B[0m \u001B[1;34m'glue'\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0mpair\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m      3\u001B[0m \u001B[1;33m\u001B[0m\u001B[0m\n\u001B[1;32m----> 4\u001B[1;33m \u001B[0max\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mshow\u001B[0m\u001B[1;33m(\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0m",
+      "\u001B[1;31mAttributeError\u001B[0m: 'NoneType' object has no attribute 'show'"
+     ]
+    },
     {
      "data": {
       "text/plain": "<Figure size 432x288 with 0 Axes>"
@@ -159,7 +171,7 @@
    ],
    "source": [
     "for pair in mat_vs_glue:\n",
-    "    plot_pair(df_f, ('mat', 'glue'), pair)"
+    "    ax = plot_pair(df_f, ('mat', 'glue'), pair)\n"
    ],
    "metadata": {
     "collapsed": false,
