feat: update plot gen with glue-vs-mat product

--- a/tear_plots/plot_gen.ipynb
+++ b/tear_plots/plot_gen.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "30c63405-4b66-4941-ac91-9081974b782d",
    "metadata": {},
    "outputs": [],
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "id": "dba91ddd-b7ab-4e2a-a12c-96b6d9db2234",
    "metadata": {
     "collapsed": false,
@@ -42,143 +42,10 @@
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Unnamed: 0</th>\n",
-       "      <th>L(mm)</th>\n",
-       "      <th>F(N)</th>\n",
-       "      <th>deriv</th>\n",
-       "      <th>batch</th>\n",
-       "      <th>measure</th>\n",
-       "      <th>mat</th>\n",
-       "      <th>glue</th>\n",
-       "      <th>glue_thickness</th>\n",
-       "      <th>pattern</th>\n",
-       "      <th>cell_size</th>\n",
-       "      <th>is_glue</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2021-08-26_glue_no-glue</td>\n",
-       "      <td>349</td>\n",
-       "      <td>Бумага офсетная для печати «Гознак 200 г»</td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td>Без клея</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>0.20</td>\n",
-       "      <td>0.2</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>2021-08-26_glue_no-glue</td>\n",
-       "      <td>349</td>\n",
-       "      <td>Бумага офсетная для печати «Гознак 200 г»</td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td>Без клея</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2</td>\n",
-       "      <td>0.26</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>-3.333333</td>\n",
-       "      <td>2021-08-26_glue_no-glue</td>\n",
-       "      <td>349</td>\n",
-       "      <td>Бумага офсетная для печати «Гознак 200 г»</td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td>Без клея</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>3</td>\n",
-       "      <td>0.32</td>\n",
-       "      <td>0.7</td>\n",
-       "      <td>11.666667</td>\n",
-       "      <td>2021-08-26_glue_no-glue</td>\n",
-       "      <td>349</td>\n",
-       "      <td>Бумага офсетная для печати «Гознак 200 г»</td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td>Без клея</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>4</td>\n",
-       "      <td>0.39</td>\n",
-       "      <td>1.7</td>\n",
-       "      <td>14.285714</td>\n",
-       "      <td>2021-08-26_glue_no-glue</td>\n",
-       "      <td>349</td>\n",
-       "      <td>Бумага офсетная для печати «Гознак 200 г»</td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td>Без клея</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   Unnamed: 0  L(mm)  F(N)      deriv                    batch  measure  \\\n",
-       "0           0   0.00   0.0        NaN  2021-08-26_glue_no-glue      349   \n",
-       "1           1   0.20   0.2   1.000000  2021-08-26_glue_no-glue      349   \n",
-       "2           2   0.26   0.0  -3.333333  2021-08-26_glue_no-glue      349   \n",
-       "3           3   0.32   0.7  11.666667  2021-08-26_glue_no-glue      349   \n",
-       "4           4   0.39   1.7  14.285714  2021-08-26_glue_no-glue      349   \n",
-       "\n",
-       "                                         mat glue glue_thickness pattern  \\\n",
-       "0  Бумага офсетная для печати «Гознак 200 г»                               \n",
-       "1  Бумага офсетная для печати «Гознак 200 г»                               \n",
-       "2  Бумага офсетная для печати «Гознак 200 г»                               \n",
-       "3  Бумага офсетная для печати «Гознак 200 г»                               \n",
-       "4  Бумага офсетная для печати «Гознак 200 г»                               \n",
-       "\n",
-       "  cell_size   is_glue  \n",
-       "0            Без клея  \n",
-       "1            Без клея  \n",
-       "2            Без клея  \n",
-       "3            Без клея  \n",
-       "4            Без клея  "
-      ]
+      "text/plain": "   Unnamed: 0  L(mm)  F(N)      deriv                    batch  measure  \\\n0           0   0.00   0.0        NaN  2021-08-26_glue_no-glue      349   \n1           1   0.20   0.2   1.000000  2021-08-26_glue_no-glue      349   \n2           2   0.26   0.0  -3.333333  2021-08-26_glue_no-glue      349   \n3           3   0.32   0.7  11.666667  2021-08-26_glue_no-glue      349   \n4           4   0.39   1.7  14.285714  2021-08-26_glue_no-glue      349   \n\n                                         mat glue glue_thickness pattern  \\\n0  Бумага офсетная для печати «Гознак 200 г»                               \n1  Бумага офсетная для печати «Гознак 200 г»                               \n2  Бумага офсетная для печати «Гознак 200 г»                               \n3  Бумага офсетная для печати «Гознак 200 г»                               \n4  Бумага офсетная для печати «Гознак 200 г»                               \n\n  cell_size   is_glue  \n0            Без клея  \n1            Без клея  \n2            Без клея  \n3            Без клея  \n4            Без клея  ",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Unnamed: 0</th>\n      <th>L(mm)</th>\n      <th>F(N)</th>\n      <th>deriv</th>\n      <th>batch</th>\n      <th>measure</th>\n      <th>mat</th>\n      <th>glue</th>\n      <th>glue_thickness</th>\n      <th>pattern</th>\n      <th>cell_size</th>\n      <th>is_glue</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>0</td>\n      <td>0.00</td>\n      <td>0.0</td>\n      <td>NaN</td>\n      <td>2021-08-26_glue_no-glue</td>\n      <td>349</td>\n      <td>Бумага офсетная для печати «Гознак 200 г»</td>\n      <td></td>\n      <td></td>\n      <td></td>\n      <td></td>\n      <td>Без клея</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>1</td>\n      <td>0.20</td>\n      <td>0.2</td>\n      <td>1.000000</td>\n      <td>2021-08-26_glue_no-glue</td>\n      <td>349</td>\n      <td>Бумага офсетная для печати «Гознак 200 г»</td>\n      <td></td>\n      <td></td>\n      <td></td>\n      <td></td>\n      <td>Без клея</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>2</td>\n      <td>0.26</td>\n      <td>0.0</td>\n      <td>-3.333333</td>\n      <td>2021-08-26_glue_no-glue</td>\n      <td>349</td>\n      <td>Бумага офсетная для печати «Гознак 200 г»</td>\n      <td></td>\n      <td></td>\n      <td></td>\n      <td></td>\n      <td>Без клея</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>3</td>\n      <td>0.32</td>\n      <td>0.7</td>\n      <td>11.666667</td>\n      <td>2021-08-26_glue_no-glue</td>\n      <td>349</td>\n      <td>Бумага офсетная для печати «Гознак 200 г»</td>\n      <td></td>\n      <td></td>\n      <td></td>\n      <td></td>\n      <td>Без клея</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>4</td>\n      <td>0.39</td>\n      <td>1.7</td>\n      <td>14.285714</td>\n      <td>2021-08-26_glue_no-glue</td>\n      <td>349</td>\n      <td>Бумага офсетная для печати «Гознак 200 г»</td>\n      <td></td>\n      <td></td>\n      <td></td>\n      <td></td>\n      <td>Без клея</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 7,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -212,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 4,
    "id": "b4be5d51-e46f-420e-8e88-466c0569d8c6",
    "metadata": {
     "collapsed": false,
@@ -226,15 +93,9 @@
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "['Centro Grafico 125 WB',\n",
-       " 'Nollax S35.3032',\n",
-       " 'OpSec WRS853',\n",
-       " 'Хомакол 943 ВР',\n",
-       " 'без клея']"
-      ]
+      "text/plain": "['Centro Grafico 125 WB',\n 'Nollax S35.3032',\n 'OpSec WRS853',\n 'Хомакол 943 ВР',\n 'без клея']"
      },
-     "execution_count": 52,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -251,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 56,
    "id": "d0ff336f",
    "metadata": {
     "collapsed": false,
@@ -265,38 +126,9 @@
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "[('Бумага для печати «Omega Silk 150 г»', 'без клеевого слоя'),\n",
-       " ('Бумага для печати «Omega Silk 150 г»', 'с клеевым слоем 1/3'),\n",
-       " ('Бумага для печати «Omega Silk 150 г»', 'с клеевым слоем 1/4'),\n",
-       " ('Бумага для печати «Omega Silk 150 г»', 'с клеевым слоем 1/5'),\n",
-       " ('Бумага офсетная для печати «Гознак 200 г»', 'без клеевого слоя'),\n",
-       " ('Бумага офсетная для печати «Гознак 200 г»', 'с клеевым слоем 1/3'),\n",
-       " ('Бумага офсетная для печати «Гознак 200 г»', 'с клеевым слоем 1/4'),\n",
-       " ('Бумага офсетная для печати «Гознак 200 г»', 'с клеевым слоем 1/5'),\n",
-       " ('Бумага офсетная для печати «Гознак 80 г»', 'без клеевого слоя'),\n",
-       " ('Бумага офсетная для печати «Гознак 80 г»', 'с клеевым слоем 1/3'),\n",
-       " ('Бумага офсетная для печати «Гознак 80 г»', 'с клеевым слоем 1/4'),\n",
-       " ('Бумага офсетная для печати «Гознак 80 г»', 'с клеевым слоем 1/5'),\n",
-       " ('Синтетическая бумага «Neobond 200 г»', 'без клеевого слоя'),\n",
-       " ('Синтетическая бумага «Neobond 200 г»', 'с клеевым слоем 1/3'),\n",
-       " ('Синтетическая бумага «Neobond 200 г»', 'с клеевым слоем 1/4'),\n",
-       " ('Синтетическая бумага «Neobond 200 г»', 'с клеевым слоем 1/5'),\n",
-       " ('Синтетическая бумага «Neobond Classic 150 г»', 'без клеевого слоя'),\n",
-       " ('Синтетическая бумага «Neobond Classic 150 г»', 'с клеевым слоем 1/3'),\n",
-       " ('Синтетическая бумага «Neobond Classic 150 г»', 'с клеевым слоем 1/4'),\n",
-       " ('Синтетическая бумага «Neobond Classic 150 г»', 'с клеевым слоем 1/5'),\n",
-       " ('Синтетическая бумага «Pretex 150 г»', 'без клеевого слоя'),\n",
-       " ('Синтетическая бумага «Pretex 150 г»', 'с клеевым слоем 1/3'),\n",
-       " ('Синтетическая бумага «Pretex 150 г»', 'с клеевым слоем 1/4'),\n",
-       " ('Синтетическая бумага «Pretex 150 г»', 'с клеевым слоем 1/5'),\n",
-       " ('Синтетическая бумага «Pretex 200 г»', 'без клеевого слоя'),\n",
-       " ('Синтетическая бумага «Pretex 200 г»', 'с клеевым слоем 1/3'),\n",
-       " ('Синтетическая бумага «Pretex 200 г»', 'с клеевым слоем 1/4'),\n",
-       " ('Синтетическая бумага «Pretex 200 г»', 'с клеевым слоем 1/5')]"
-      ]
+      "text/plain": "[('Centro Grafico 125 WB', 'Бумага для печати «Omega Silk 150 г»'),\n ('Centro Grafico 125 WB', 'Бумага офсетная для печати «Гознак 200 г»'),\n ('Centro Grafico 125 WB', 'Бумага офсетная для печати «Гознак 80 г»'),\n ('Centro Grafico 125 WB', 'Синтетическая бумага «Neobond 200 г»'),\n ('Centro Grafico 125 WB', 'Синтетическая бумага «Neobond Classic 150 г»'),\n ('Centro Grafico 125 WB', 'Синтетическая бумага «Pretex 150 г»'),\n ('Centro Grafico 125 WB', 'Синтетическая бумага «Pretex 200 г»'),\n ('Nollax S35.3032', 'Бумага для печати «Omega Silk 150 г»'),\n ('Nollax S35.3032', 'Бумага офсетная для печати «Гознак 200 г»'),\n ('Nollax S35.3032', 'Бумага офсетная для печати «Гознак 80 г»'),\n ('Nollax S35.3032', 'Синтетическая бумага «Neobond 200 г»'),\n ('Nollax S35.3032', 'Синтетическая бумага «Neobond Classic 150 г»'),\n ('Nollax S35.3032', 'Синтетическая бумага «Pretex 150 г»'),\n ('Nollax S35.3032', 'Синтетическая бумага «Pretex 200 г»'),\n ('OpSec WRS853', 'Бумага для печати «Omega Silk 150 г»'),\n ('OpSec WRS853', 'Бумага офсетная для печати «Гознак 200 г»'),\n ('OpSec WRS853', 'Бумага офсетная для печати «Гознак 80 г»'),\n ('OpSec WRS853', 'Синтетическая бумага «Neobond 200 г»'),\n ('OpSec WRS853', 'Синтетическая бумага «Neobond Classic 150 г»'),\n ('OpSec WRS853', 'Синтетическая бумага «Pretex 150 г»'),\n ('OpSec WRS853', 'Синтетическая бумага «Pretex 200 г»'),\n ('Хомакол 943 ВР', 'Бумага для печати «Omega Silk 150 г»'),\n ('Хомакол 943 ВР', 'Бумага офсетная для печати «Гознак 200 г»'),\n ('Хомакол 943 ВР', 'Бумага офсетная для печати «Гознак 80 г»'),\n ('Хомакол 943 ВР', 'Синтетическая бумага «Neobond 200 г»'),\n ('Хомакол 943 ВР', 'Синтетическая бумага «Neobond Classic 150 г»'),\n ('Хомакол 943 ВР', 'Синтетическая бумага «Pretex 150 г»'),\n ('Хомакол 943 ВР', 'Синтетическая бумага «Pretex 200 г»'),\n ('без клея', 'Бумага для печати «Omega Silk 150 г»'),\n ('без клея', 'Бумага офсетная для печати «Гознак 200 г»'),\n ('без клея', 'Бумага офсетная для печати «Гознак 80 г»'),\n ('без клея', 'Синтетическая бумага «Neobond 200 г»'),\n ('без клея', 'Синтетическая бумага «Neobond Classic 150 г»'),\n ('без клея', 'Синтетическая бумага «Pretex 150 г»'),\n ('без клея', 'Синтетическая бумага «Pretex 200 г»')]"
      },
-     "execution_count": 60,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -307,12 +139,13 @@
     "pattern_vs_cell_size = list(itertools.product(mats, pattern, cell_size))\n",
     "mat_vs_no_glue = list(itertools.product(mats, ['без клея']))\n",
     "mat_vs_glue_thickness = list(itertools.product(mats, glue_thickness))\n",
-    "mat_vs_glue_thickness"
+    "glue_vs_mat = list(itertools.product(glues, mats))\n",
+    "glue_vs_mat"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 79,
    "id": "e0da0b84-aec2-470a-95e6-64634dcfd959",
    "metadata": {
     "collapsed": false,
@@ -329,20 +162,20 @@
     "    col1, col2 = cols\n",
     "    val1, val2 = pair\n",
     "\n",
-    "    ax = sb.lineplot(data=df.loc[(df[col1] == val1) & (df[col2] == val2)], x='L(mm)', y='F(N)', hue='measure', palette='flare')\n",
+    "    ax = sb.lineplot(data=df.loc[(df[col1] == val1) & (df[col2] == val2) & (df['measure'] != 1080)], x='L(mm)', y='F(N)', hue='measure', palette='flare')\n",
     "    ax.set(xlim=xlim, ylim=ylim, title=f'{val1} | {val2}')\n",
     "\n",
     "    fig = ax.get_figure()\n",
     "    # fig.set_figwidth(15)\n",
     "    # fig.set_figheight(10)\n",
-    "    fig.savefig(f'{pair}.jpg'.replace('/', '-'), dpi=300)\n",
+    "    fig.savefig(f'{pair}.jpg'.replace('/', '-'), dpi=400)\n",
     "    fig.clf()\n",
     "    return ax"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 80,
    "id": "e4bbca93-679c-4d46-9f5b-8380c7ad9570",
    "metadata": {
     "collapsed": false,
@@ -365,14 +198,14 @@
     "    fig = ax.get_figure()\n",
     "    # fig.set_figwidth(15)\n",
     "    # fig.set_figheight(10)\n",
-    "    fig.savefig(f'{pair}.jpg'.replace('/', '-'), dpi=300)\n",
+    "    fig.savefig(f'{pair}.jpg'.replace('/', '-'), dpi=400)\n",
     "    fig.clf()\n",
     "    return ax"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 83,
    "id": "075feec1",
    "metadata": {
     "collapsed": false,
@@ -386,17 +219,15 @@
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "<Figure size 432x288 with 0 Axes>"
-      ]
+      "text/plain": "<Figure size 432x288 with 0 Axes>"
      },
      "metadata": {},
      "output_type": "display_data"
     }
    ],
    "source": [
-    "for pair in mat_vs_glue_thickness:\n",
-    "    ax = plot_pair(df_f, ('mat', 'glue_thickness'), pair, (0, 3), (0, 45))\n",
+    "for pair in glue_vs_mat[28:]:\n",
+    "    ax = plot_pair(df_f, ('glue', 'mat'), pair, (0, 5), (0, 60))\n",
     "\n",
     "# for three in pattern_vs_cell_size:\n",
     "#     ax = plot_three(df_f, ('mat', 'pattern', 'cell_size'), three, (0, 6), (0, 60))\n"
