misc: update mat tagger for slices

--- a/slice_plots/mat_tagger.ipynb
+++ b/slice_plots/mat_tagger.ipynb
@@ -8,21 +8,124 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
+    "\n",
     "from numpy import nan"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "2739718f-fcaa-426c-a0c7-9f14c8ae68f3",
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/plain": "   measure              mat                          glue glue_paper rate  \\\n0       81  Необонд классик                      без клея                   \n1       82  Необонд классик                      без клея                   \n2       83  Необонд классик                      без клея                   \n3       84      Гознак 200г  Суспензия акриловых латексов                   \n4       85      Гознак 200г  Суспензия акриловых латексов                   \n\n  pattern cell_size strip  \n0                          \n1                          \n2                          \n3                          \n4                          ",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>measure</th>\n      <th>mat</th>\n      <th>glue</th>\n      <th>glue_paper</th>\n      <th>rate</th>\n      <th>pattern</th>\n      <th>cell_size</th>\n      <th>strip</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>81</td>\n      <td>Необонд классик</td>\n      <td>без клея</td>\n      <td></td>\n      <td></td>\n      <td></td>\n      <td></td>\n      <td></td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>82</td>\n      <td>Необонд классик</td>\n      <td>без клея</td>\n      <td></td>\n      <td></td>\n      <td></td>\n      <td></td>\n      <td></td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>83</td>\n      <td>Необонд классик</td>\n      <td>без клея</td>\n      <td></td>\n      <td></td>\n      <td></td>\n      <td></td>\n      <td></td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>84</td>\n      <td>Гознак 200г</td>\n      <td>Суспензия акриловых латексов</td>\n      <td></td>\n      <td></td>\n      <td></td>\n      <td></td>\n      <td></td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>85</td>\n      <td>Гознак 200г</td>\n      <td>Суспензия акриловых латексов</td>\n      <td></td>\n      <td></td>\n      <td></td>\n      <td></td>\n      <td></td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>measure</th>\n",
+       "      <th>mat</th>\n",
+       "      <th>glue</th>\n",
+       "      <th>glue_paper</th>\n",
+       "      <th>rate</th>\n",
+       "      <th>pattern</th>\n",
+       "      <th>cell_size</th>\n",
+       "      <th>strip</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>81</td>\n",
+       "      <td>Необонд классик</td>\n",
+       "      <td>без клея</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>82</td>\n",
+       "      <td>Необонд классик</td>\n",
+       "      <td>без клея</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>83</td>\n",
+       "      <td>Необонд классик</td>\n",
+       "      <td>без клея</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>84</td>\n",
+       "      <td>Гознак 200г</td>\n",
+       "      <td>Суспензия акриловых латексов</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>85</td>\n",
+       "      <td>Гознак 200г</td>\n",
+       "      <td>Суспензия акриловых латексов</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   measure              mat                          glue glue_paper rate  \\\n",
+       "0       81  Необонд классик                      без клея                   \n",
+       "1       82  Необонд классик                      без клея                   \n",
+       "2       83  Необонд классик                      без клея                   \n",
+       "3       84      Гознак 200г  Суспензия акриловых латексов                   \n",
+       "4       85      Гознак 200г  Суспензия акриловых латексов                   \n",
+       "\n",
+       "  pattern cell_size strip  \n",
+       "0                          \n",
+       "1                          \n",
+       "2                          \n",
+       "3                          \n",
+       "4                          "
+      ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -625,7 +728,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "30c63405-4b66-4941-ac91-9081974b782d",
    "metadata": {},
    "outputs": [],
@@ -636,8 +739,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "83eab804",
+   "execution_count": 4,
+   "id": "8a424535-f0e4-463d-af6f-dc23a2119762",
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -650,10 +753,136 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "   L(mm)  F(N)  deriv                  batch  measure              mat  \\\n0   0.00   0.0    NaN  2021-07-28_slice_glue       81  Необонд классик   \n1   0.08   0.1   1.25  2021-07-28_slice_glue       81  Необонд классик   \n2   0.13   0.0  -2.00  2021-07-28_slice_glue       81  Необонд классик   \n3   0.18   0.1   2.00  2021-07-28_slice_glue       81  Необонд классик   \n4   0.23   0.0  -2.00  2021-07-28_slice_glue       81  Необонд классик   \n\n       glue glue_paper rate pattern cell_size strip  \n0  без клея                                          \n1  без клея                                          \n2  без клея                                          \n3  без клея                                          \n4  без клея                                          ",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>L(mm)</th>\n      <th>F(N)</th>\n      <th>deriv</th>\n      <th>batch</th>\n      <th>measure</th>\n      <th>mat</th>\n      <th>glue</th>\n      <th>glue_paper</th>\n      <th>rate</th>\n      <th>pattern</th>\n      <th>cell_size</th>\n      <th>strip</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>0.00</td>\n      <td>0.0</td>\n      <td>NaN</td>\n      <td>2021-07-28_slice_glue</td>\n      <td>81</td>\n      <td>Необонд классик</td>\n      <td>без клея</td>\n      <td></td>\n      <td></td>\n      <td></td>\n      <td></td>\n      <td></td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>0.08</td>\n      <td>0.1</td>\n      <td>1.25</td>\n      <td>2021-07-28_slice_glue</td>\n      <td>81</td>\n      <td>Необонд классик</td>\n      <td>без клея</td>\n      <td></td>\n      <td></td>\n      <td></td>\n      <td></td>\n      <td></td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>0.13</td>\n      <td>0.0</td>\n      <td>-2.00</td>\n      <td>2021-07-28_slice_glue</td>\n      <td>81</td>\n      <td>Необонд классик</td>\n      <td>без клея</td>\n      <td></td>\n      <td></td>\n      <td></td>\n      <td></td>\n      <td></td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>0.18</td>\n      <td>0.1</td>\n      <td>2.00</td>\n      <td>2021-07-28_slice_glue</td>\n      <td>81</td>\n      <td>Необонд классик</td>\n      <td>без клея</td>\n      <td></td>\n      <td></td>\n      <td></td>\n      <td></td>\n      <td></td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>0.23</td>\n      <td>0.0</td>\n      <td>-2.00</td>\n      <td>2021-07-28_slice_glue</td>\n      <td>81</td>\n      <td>Необонд классик</td>\n      <td>без клея</td>\n      <td></td>\n      <td></td>\n      <td></td>\n      <td></td>\n      <td></td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>L(mm)</th>\n",
+       "      <th>F(N)</th>\n",
+       "      <th>deriv</th>\n",
+       "      <th>batch</th>\n",
+       "      <th>measure</th>\n",
+       "      <th>mat</th>\n",
+       "      <th>glue</th>\n",
+       "      <th>glue_paper</th>\n",
+       "      <th>rate</th>\n",
+       "      <th>pattern</th>\n",
+       "      <th>cell_size</th>\n",
+       "      <th>strip</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2021-07-28_slice_glue</td>\n",
+       "      <td>81</td>\n",
+       "      <td>Необонд классик</td>\n",
+       "      <td>без клея</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.08</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>1.25</td>\n",
+       "      <td>2021-07-28_slice_glue</td>\n",
+       "      <td>81</td>\n",
+       "      <td>Необонд классик</td>\n",
+       "      <td>без клея</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.13</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>-2.00</td>\n",
+       "      <td>2021-07-28_slice_glue</td>\n",
+       "      <td>81</td>\n",
+       "      <td>Необонд классик</td>\n",
+       "      <td>без клея</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.18</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>2.00</td>\n",
+       "      <td>2021-07-28_slice_glue</td>\n",
+       "      <td>81</td>\n",
+       "      <td>Необонд классик</td>\n",
+       "      <td>без клея</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.23</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>-2.00</td>\n",
+       "      <td>2021-07-28_slice_glue</td>\n",
+       "      <td>81</td>\n",
+       "      <td>Необонд классик</td>\n",
+       "      <td>без клея</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   L(mm)  F(N)  deriv                  batch  measure              mat  \\\n",
+       "0   0.00   0.0    NaN  2021-07-28_slice_glue       81  Необонд классик   \n",
+       "1   0.08   0.1   1.25  2021-07-28_slice_glue       81  Необонд классик   \n",
+       "2   0.13   0.0  -2.00  2021-07-28_slice_glue       81  Необонд классик   \n",
+       "3   0.18   0.1   2.00  2021-07-28_slice_glue       81  Необонд классик   \n",
+       "4   0.23   0.0  -2.00  2021-07-28_slice_glue       81  Необонд классик   \n",
+       "\n",
+       "       glue glue_paper rate pattern cell_size strip  \n",
+       "0  без клея                                          \n",
+       "1  без клея                                          \n",
+       "2  без клея                                          \n",
+       "3  без клея                                          \n",
+       "4  без клея                                          "
+      ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -666,7 +895,163 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
+   "id": "3d013046-597b-41a4-b975-7e1115ed11e5",
+   "metadata": {
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    },
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>L(mm)</th>\n",
+       "      <th>F(N)</th>\n",
+       "      <th>deriv</th>\n",
+       "      <th>batch</th>\n",
+       "      <th>measure</th>\n",
+       "      <th>mat</th>\n",
+       "      <th>glue</th>\n",
+       "      <th>glue_paper</th>\n",
+       "      <th>rate</th>\n",
+       "      <th>pattern</th>\n",
+       "      <th>cell_size</th>\n",
+       "      <th>strip</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td></td>\n",
+       "      <td>2021-07-28_slice_glue</td>\n",
+       "      <td>81</td>\n",
+       "      <td>Необонд классик</td>\n",
+       "      <td>без клея</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.08</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>1.25</td>\n",
+       "      <td>2021-07-28_slice_glue</td>\n",
+       "      <td>81</td>\n",
+       "      <td>Необонд классик</td>\n",
+       "      <td>без клея</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.13</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>-2.0</td>\n",
+       "      <td>2021-07-28_slice_glue</td>\n",
+       "      <td>81</td>\n",
+       "      <td>Необонд классик</td>\n",
+       "      <td>без клея</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.18</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2021-07-28_slice_glue</td>\n",
+       "      <td>81</td>\n",
+       "      <td>Необонд классик</td>\n",
+       "      <td>без клея</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.23</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>-2.0</td>\n",
+       "      <td>2021-07-28_slice_glue</td>\n",
+       "      <td>81</td>\n",
+       "      <td>Необонд классик</td>\n",
+       "      <td>без клея</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   L(mm)  F(N) deriv                  batch  measure              mat  \\\n",
+       "0   0.00   0.0        2021-07-28_slice_glue       81  Необонд классик   \n",
+       "1   0.08   0.1  1.25  2021-07-28_slice_glue       81  Необонд классик   \n",
+       "2   0.13   0.0  -2.0  2021-07-28_slice_glue       81  Необонд классик   \n",
+       "3   0.18   0.1   2.0  2021-07-28_slice_glue       81  Необонд классик   \n",
+       "4   0.23   0.0  -2.0  2021-07-28_slice_glue       81  Необонд классик   \n",
+       "\n",
+       "       glue glue_paper rate pattern cell_size strip  \n",
+       "0  без клея                                          \n",
+       "1  без клея                                          \n",
+       "2  без клея                                          \n",
+       "3  без клея                                          \n",
+       "4  без клея                                          "
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_merged.replace([nan], '', inplace=True)\n",
+    "df_f_merged.replace([nan], '', inplace=True)\n",
+    "df_f_merged.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "b23009df-a88c-4e6e-a089-f9f924f7d95d",
    "metadata": {
     "collapsed": false,
